Updating to JDK 21 (no more preview, yay!) and generating a valid program with the "--new" CLI flag