@@ -4,7 +4,7 @@
     <artifactId>fearless</artifactId>
     <version>1</version>
     <properties>
-        <maven.compiler.release>20</maven.compiler.release>
+        <maven.compiler.release>21</maven.compiler.release>
     </properties>
     <dependencies>
         <dependency>
@@ -99,11 +99,11 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>20</source>
-                    <target>20</target>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
+                    <source>21</source>
+                    <target>21</target>
+<!--                    <compilerArgs>-->
+<!--                        <arg>&#45;&#45;enable-preview</arg>-->
+<!--                    </compilerArgs>-->
 <!--                    <excludes>-->
 <!--                        <exclude>codegen/truffle/*.java</exclude>-->
 <!--                    </excludes>-->
@@ -114,7 +114,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M2</version>
                 <configuration>
-                    <argLine>--enable-preview</argLine>
+<!--                    <argLine>&#45;&#45;enable-preview</argLine>-->
                     <useModulePath>false</useModulePath>
                     <!-- TODO: temp during dev -->
                     <skip>true</skip>
